// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu/> should render correctly for moderator 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame accent-color__backlog-blue"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  placeholder="scrumlr.io"
                  value="test-board-name"
                />
                <button
                  class="board-settings__edit-button"
                  type="submit"
                >
                  edit
                </button>
              </form>
            </li>
            <li
              class="board-option"
              data-testid="author"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show authors of notes
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="note"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show notes of other users
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="column"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--left"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show hidden columns for me
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="allSettings"
            >
              <a
                class="board-option-link"
                href="/settings"
              >
                <p
                  class="board-option-link__label"
                >
                  Show all board settings
                </p>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`<HeaderMenu/> should render correctly for participants 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame accent-color__backlog-blue"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  placeholder="scrumlr.io"
                  value="test-board-name"
                />
              </form>
            </li>
            <li
              class="board-option"
              data-testid="allSettings"
            >
              <a
                class="board-option-link"
                href="/settings"
              >
                <p
                  class="board-option-link__label"
                >
                  Show all board settings
                </p>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;
